force-app/main/default/objects/C360_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ชื่อบริษัทของลูกค้า</description>
        <label>Company Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>มูลค่าของโอกาส</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CargoSize__c</fullName>
        <label>Cargo Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Opportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>CreatedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerApprovalStatus__c</fullName>
        <description>สถานะการอนุมัติจากลูกค้า</description>
        <label>Customer Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SalesContractRequired__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryCondition__c</fullName>
        <description>เงื่อนไขการจัดส่ง</description>
        <label>Delivery Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <label>Inspection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LastStatusUpdate__c</fullName>
        <label>Last Status Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>LastModifiedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LostReason__c</fullName>
        <description>เหตุผลที่ไม่สามารถปิดการขายได้</description>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget/Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision/Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>No Economics</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NoUpdateDays__c</fullName>
        <formula>IF(ISBLANK(LastStatusUpdate__c), TODAY() - DATEVALUE(CreatedDate), TODAY() - LastStatusUpdate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Update (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Lost_Reasons__c</fullName>
        <label>Other Lost Reasons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <label>Others</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Packing__c</fullName>
        <label>Packing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <description>การชำระเงิน</description>
        <label>Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>เงื่อนไขของราคา</description>
        <label>Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <description>คุณภาพสินค้า</description>
        <label>Quality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>ปริมาณ</description>
        <label>Quantity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesContractRequired__c</fullName>
        <label>Sales Contract Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <description>ระยะเวลาการจัดส่ง</description>
        <label>Shipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Spec Verification</fullName>
                </value>
                <value>
                    <fullName>Sample Submission</fullName>
                </value>
                <value>
                    <fullName>Quotation</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Award Selection</fullName>
                </value>
                <value>
                    <fullName>Bidding Closed</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmissionDate__c</fullName>
        <description>วันส่งเอกสาร</description>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechnicalClarificationDate__c</fullName>
        <description>วันแจกแจงข้อมูลจำเพาะของสินค้า</description>
        <label>Technical Clarification Date</label>
        <type>Date</type>
    </fields>
    <label>Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>CloseDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCustomerBidding</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Stage__c</columns>
        <columns>StartDate__c</columns>
        <columns>CloseDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>C360_Opportunity__c.CustomerBidding</value>
        </filters>
        <label>All Customer Bidding Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllJointBidding</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Stage__c</columns>
        <columns>StartDate__c</columns>
        <columns>CloseDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>C360_Opportunity__c.JointBidding</value>
        </filters>
        <label>All Joint Bidding Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllNewProductHVP</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Stage__c</columns>
        <columns>TargetDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>CloseDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>C360_Opportunity__c.NewProductHVP</value>
        </filters>
        <label>All New Product/HVP Opportunities</label>
    </listViews>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>CustomerBidding</fullName>
        <active>true</active>
        <label>Customer Bidding</label>
    </recordTypes>
    <recordTypes>
        <fullName>JointBidding</fullName>
        <active>true</active>
        <label>Joint Bidding</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewProductHVP</fullName>
        <active>true</active>
        <label>New Product/HVP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>C360_Validate_StartdateEnddate</fullName>
        <active>true</active>
        <description>Validate Start date should no over than end date</description>
        <errorConditionFormula>StartDate__c &gt; CloseDate__c</errorConditionFormula>
        <errorMessage>Start that should be less than the close date. Please try again.</errorMessage>
    </validationRules>
</CustomObject>